Made the app server side rendered
This will provide an easier base to work with. We don't need the benefits of client side renders since this will mostly be static content.

SSR will actually help here since it is way faster to load.

--- a/Portfolio.Server/Components/_Imports.razor
+++ b/Portfolio.Server/Components/_Imports.razor
@@ -9,5 +9,5 @@
 @using MudBlazor
 @using MudBlazor.Services
 @using Portfolio.Server
-@using Portfolio.Client
 @using Portfolio.Server.Components
+@using Microsoft.EntityFrameworkCore
