Add markdown to project descriptions
This way we can easily write projects in markdown for simple styling of the description.

--- a/Portfolio/Components/Pages/Project.razor
+++ b/Portfolio/Components/Pages/Project.razor
@@ -4,10 +4,9 @@
 @using Portfolio.Server.Data
 @inject PortfolioDbContext Db
 @inject NavigationManager NavigationManager
-<h3>Project</h3>
 
-<MudText>@ProjectObj.Title</MudText>
-<MudText>@ProjectObj.Description</MudText>
+<MudText Typo="Typo.h1">@ProjectObj.Title</MudText>
+<MudMarkdown Value="@ProjectObj.Description" HasTableOfContents="true"/>
 
 @code {
     [Parameter]
